数問解いた

--- a/colab/1/1-1.ipynb
+++ b/colab/1/1-1.ipynb
@@ -345,11 +345,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "VTQ5FmzjqwxR",
-        "outputId": "bb690eab-7483-4df0-f319-e447c8c60bf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VTQ5FmzjqwxR",
+        "outputId": "bb690eab-7483-4df0-f319-e447c8c60bf0"
       },
       "outputs": [
         {
@@ -371,11 +371,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "l5fSfJKLqwxR",
-        "outputId": "347883b5-6cf3-4e35-a5ae-331fac17a54d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l5fSfJKLqwxR",
+        "outputId": "347883b5-6cf3-4e35-a5ae-331fac17a54d"
       },
       "outputs": [
         {
@@ -397,11 +397,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "nnZweTk7qwxS",
-        "outputId": "d74e5f2c-f076-47ed-e253-ac188ef396e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nnZweTk7qwxS",
+        "outputId": "d74e5f2c-f076-47ed-e253-ac188ef396e9"
       },
       "outputs": [
         {
@@ -790,11 +790,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "7KsWuwY-qwxd",
-        "outputId": "529ab17d-5058-405c-96ca-98f42255c420",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7KsWuwY-qwxd",
+        "outputId": "529ab17d-5058-405c-96ca-98f42255c420"
       },
       "outputs": [
         {
@@ -1170,12 +1170,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "X1f0d2MQqwxg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X1f0d2MQqwxg",
+        "outputId": "9bebd284-f1d6-479f-c2e7-e05917543f29"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.618033988749895"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
+      "source": [
+        "import math\n",
+        "(math.sqrt(5)+1)/2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1N6OjVbNrj-A"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ],
   "metadata": {
